# wx3.1.2gcc

./: .travis.yml  CMakeLists.txt
cmake/: conan.cmake
src/: main.cpp
